2010-07-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix scrolling the editor line in view after loading a session and
   switching document tabs. Note this causes repainting so needs
   improvement.


2010-07-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.c, doc/geany.txt, doc/geany.html:
   Fix writing empty hidden pref "statusbar_template" key so users can
   find it (patch by Dimitar Zhekov, thanks).
 * src/ui_utils.c, src/ui_utils.h, src/main.c:
   Add ui_finalize(), free string (patch by Dimitar Zhekov, thanks).


2010-07-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/project.c, src/project.h:
   Show the Project Properties build tab when choosing 'Set Build
   Commands' for now to prevent confusion with non-project commands.


2010-07-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, doc/geany.txt, doc/geany.html:
   Fix Grep --exclude-dir example.


2010-07-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sidebar.c:
   Add sidebar Documents popup menu item 'Find in Files'.
 * src/keyfile.c, src/main.c, src/editor.c:
   Don't unnecessarily test G_FILE_TEST_IS_SYMLINK when testing
   G_FILE_TEST_IS_REGULAR (patch by Dimitar Zhekov, thanks).


2010-07-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Fix wording - restarting is required for hidden prefs.
   File templates don't need manual reloading anymore.
 * src/ui_utils.c:
   Fix only adding project base path to Find in Files history if it
   isn't already there (oops).
 * src/msgwindow.c:
   Parse lines in the Messages window even if Find in Files hasn't
   been used yet (patch by Jiří Techet, thanks).


2010-07-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/LexCPP.cxx, src/highlighting.c:
   Add C++ lexer property fold.cpp.comment.explicit (patch sent); set