@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-07-06" />
+<meta name="date" content="2010-07-08" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-07-06</td></tr>
+<td>2010-07-08</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -4648,6 +4648,12 @@ dialog. These can be set by editing the preferences file, then
 restarting Geany. Search for the key name, then edit the value. Example:</p>
 <blockquote>
 <tt class="docutils literal"><span class="pre">brace_match_ltgt=true</span></tt></blockquote>
+<div class="note">
+<p class="first admonition-title">Note</p>
+<p class="last">If you just installed or updated Geany, you should restart it
+first so Geany can write/update the config file and you can find
+the key lines.</p>
+</div>
 <p>The table below show the key names of hidden preferences in the
 configuration file.</p>
 <table border="1" class="docutils">
@@ -6137,7 +6143,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-07-08 11:31 UTC.
+Generated on: 2010-07-09 12:18 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
